--- a/css/style.css
+++ b/css/style.css
@@ -37,14 +37,14 @@ body {
     align-items: center;
 }
 
-h2 {
+.header__title {
     margin: 10px auto;
 
     color: var(--col-text);
 }
 
 /* Button back */
-.back {
+.header__back-btn {
     margin: 10px;
     padding: 5px;
 
@@ -59,12 +59,12 @@ h2 {
     box-shadow: 0 2px 4px grey;
 }
 
-.back:hover {
+.header__back-btn:hover {
     scale: 102%;
     box-shadow: 0 0 4px grey;
 }
 
-.back:active {
+.header__back-btn:active {
     scale: 99%;
     box-shadow: 0 2px 3px grey;
 }
@@ -160,6 +160,7 @@ h2 {
 
 .details-user {
     min-width: 750px;
+    min-height: 300px;
 
     display: flex;
 
@@ -179,6 +180,7 @@ h2 {
 
 .details-user > div {
     padding: 0 15px;
+    overflow: hidden;
 }
 
 .details-user > div:nth-child(-n+2) {
@@ -198,6 +200,7 @@ scale: 101%;
 
     display: flex;
     justify-content: center;
+    gap: 30px;
 }
 
 .posts-list {
@@ -241,10 +244,11 @@ scale: 101%;
 }
 
 /* Buttons on the user-details page */
-.btn__open-titles {
+.btn-open-titles {
     width: 90%;
+    max-width: 870px;
     margin: 20px auto;
-    padding: 5px;
+    padding: 8px;
 
     cursor: pointer;
 
@@ -308,7 +312,6 @@ scale: 101%;
 /* -------------------------- Post-details ------------------------------ */
 
 .wrapper-post {
-    display: flex;
     flex-direction: column;
     flex-wrap: nowrap;
     justify-content: flex-start;
@@ -318,6 +321,7 @@ scale: 101%;
 .details-post {
     width: 100%;
     max-width: 700px;
+    min-height: 190px;
     margin-bottom: 20px;
 
     display: flex;
@@ -386,6 +390,25 @@ scale: 101%;
     border-radius: 3px;
 }
 
+
+
+/* ---------------- footer ----------------------*/
+.foot {
+    width: 100%;
+    height: 50px;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    color: var(--col-text);
+
+    border-top: 1px solid grey;
+
+    position: absolute;
+    bottom: 0;
+    z-index: -1;
+}
 
 
 /* ---------------- Animation ------------------ */
