--- a/css/style.css
+++ b/css/style.css
@@ -23,7 +23,7 @@ body {
 
 .wrapper {
     width: 100%;
-    min-height: 100vh;
+    min-height: calc(100vh - 50px);
     padding: 10px;
 
     display: flex;
@@ -404,10 +404,6 @@ scale: 101%;
     color: var(--col-text);
 
     border-top: 1px solid grey;
-
-    position: absolute;
-    bottom: 0;
-    z-index: -1;
 }
 
 
